--- a/package.json
+++ b/package.json
@@ -7,21 +7,30 @@
     "build-client": "webpack -p",
     "deploy": "script/deploy",
     "heroku-token": "script/encrypt-heroku-auth-token.js",
+    "postinstall": "webpack",
+    "prepare": "postinstall",
     "seed": "node script/seed.js",
     "start": "node server/index.js",
     "start-dev": "nodemon server/index.js --ignore public --ignore client & webpack -w",
     "test": "NODE_ENV=test mocha {server,client}/**/*.test.js --require @babel/polyfill --require @babel/register"
   },
+  "prepare": {
+    "webpack": "browserify lib/"
+  },
+  "postinstall": {
+    "webpack": "webpack"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.1",
+    "axios": "^0.24.0",
     "express": "^4.16.3",
     "faker": "^4.1.0",
     "git-url-parse": "^11.1.2",
     "nodemon": "^1.18.9",
     "pg": "^8.3.0",
+    "postinstall": "^0.7.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "sequelize": "^4.38.1",
